methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:33: error: not found: value setColeurBrosse
  setColeurBrosse(); faireV();
  ^